# Battle_Ship

./: .gitignore  CMakeLists.txt  wt_config.xml
resources/: webkit-transitions.css
resources/themes/auth_page_themes/: tg_widget.css
resources/themes/default/: wt.css
src/: main.cpp
src/applications/: all_applications.h
src/applications/authorization/: telegram_authorization.cpp  telegram_authorization.h
src/data_bases/: all_db.h
src/data_bases/user_db/: user_db.cpp  user_db.h
